完成了简单的日历

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
         <div class="search-tickets">
             <div class="select-box">
                 <citypicker></citypicker>
-               <!--  <helloworld></helloworld> -->
-                <datepanel></datepanel>
+                <!--  <helloworld></helloworld> -->
+                <div class="date">
+                    <datepanel class="set-out-date"></datepanel>
+                    <datepanel class="return-date disabled"></datepanel>
+                </div>
             </div>
         </div>
     </div>
